# gh-actions-demo

./: .dockerignore  .python-version  Dockerfile  README.md  pyproject.toml
.github/workflows/: documentation-generation.yml  gh-pages.yml  registry.yml  workflow.yml
src/: main.py
