[tool.poetry]
name = "gh-actions-demo"
version = "0.1.0"
description = "Demo Application for SDT works"
authors = ["Andrey Demenev"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}

[tool.poetry.scripts]
server = "src.main:run"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
